--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<a herf="https://catmeow232.github.io/cat-meowing/"
-
-button>meow</button>
+<a herf="https://catmeow232.github.io/cat-meowing/">
+<button>meow</button>
