--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <title>main page</title>
-<a href="catmeow232/meow/r/r.html">
+<a href="https://catmeow232.github.io/meow/r/r.html">
 <button>release notes</button>
