--- a/main/index.html
+++ b/main/index.html
@@ -1,3 +1,6 @@
-<h1 welcome to the main page>
+<h1 welcome to the main page></h1>
 
 <title>welcome to main page</title>
+
+<a href="https://catmeow232.github.io/meow/page2/index.html">
+<button>page 2</button>
